--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -14,6 +14,11 @@ status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
   #cname: demo.upptime.js.org
+  links:
+    - rel: stylesheet
+      href: https://magmahost.net/assets/bootstrap/css/bootstrap.min.css
+    - rel: stylesheet
+      href: https://magmahost.net/assets/css/styles.min.css
   baseUrl: /upptime
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
   name: Upptime
