--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -18,7 +18,10 @@ status-website:
     - rel: stylesheet
       href: https://magmahost.net/assets/bootstrap/css/bootstrap.min.css
     - rel: stylesheet
+      href: https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap
+    - rel: stylesheet
       href: https://magmahost.net/assets/css/styles.min.css
+  css: "body { font-family: 'Inter', sans-serif !important }"
   baseUrl: /upptime
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
   name: Upptime
