--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -33,8 +33,10 @@ i18n:
   footer: This page is powered by [Upptime](https://upptime.js.org)
 
 workflowSchedule:
-  graphs: "0 0 * * *"
-  responseTime: "0 23 * * *"
+  #graphs: "0 0 * * *"
+  #responseTime: "0 23 * * *"
+  graphs: "*/5 * * * *"
+  responseTime: "*/5 * * * *"
   staticSite: "0 1 * * *"
   summary: "0 0 * * *"
   updateTemplate: "0 0 * * *"
